# device_hihope

./: .gitattributes  OAT.xml  README.md  compile.md
drivers/rkwifi/bcmdhd_wifi6/: Makefile  bcmsdh_sdmmc_linux.c  bcmstdlib_s.c  dhd_config.c  dhd_linux.c  wl_android.c  wl_cfg80211.c  wl_cfgscan.c  wl_cfgscan.h  wl_iw.c
drivers/rkwifi/bcmdhd_wifi6/hdfadapt/: hdf_bdh_mac80211.c  hdf_driver_bdh_register.c  hdf_mac80211_ap.c  hdf_mac80211_sta.c  hdf_mac80211_sta.h  hdf_mac80211_sta_event.c  hdf_mac80211_sta_event.h  hdfinit_bdh.c  net_bdh_adpater.c  net_bdh_adpater.h  test_fun.c
hardware/: BUILD.gn  README.en.md  README.zh.md
hardware/camera_adapter/: BUILD.gn
hardware/display/: BUILD.gn
hardware/display/include/: display_common.h
hardware/display/src/display_device/: drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_crtc.h  drm_device.cpp  drm_device.h  drm_display.cpp  drm_display.h  drm_encoder.cpp  drm_plane.cpp  drm_plane.h  drm_vsync_worker.cpp  hdi_device_interface.cpp  hdi_device_interface.h  hdi_display.cpp  hdi_display.h  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp  hdi_drm_layer.h  hdi_gfx_composition.cpp  hdi_gfx_composition.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_netlink_monitor.h  hdi_session.cpp  hdi_session.h  hdi_shared_fd.h
hardware/display/src/display_gfx/: display_gfx.c
hardware/display/src/display_gralloc/: display_gralloc.c  display_gralloc_gbm.c  display_gralloc_gbm.h  hi_gbm.c  hi_gbm.h  wayland_drm_auth_client.c
hardware/gpu/: BUILD.gn
hardware/gpu/include/: gbm.h
hardware/isp/: BUILD.gn
hardware/mpp/: BUILD.gn
hardware/mpp/include/: mpi_enc_utils.h  mpp_allocator.h  mpp_buffer.h  mpp_common.h  mpp_dev_defs.h  mpp_device.h  mpp_env.h  mpp_err.h  mpp_eventfd.h  mpp_frame.h  mpp_hash.h  mpp_list.h  mpp_log.h  mpp_mem.h  mpp_mem_pool.h  mpp_meta.h  mpp_packet.h  mpp_platform.h  mpp_queue.h  mpp_rc_api.h  mpp_rc_defs.h  mpp_runtime.h  mpp_server.h  mpp_service.h  mpp_service_api.h  mpp_soc.h  mpp_task.h  mpp_thread.h  mpp_time.h  mpp_trace.h  osal_2str.h  rk_mpi.h  rk_mpi_cmd.h  rk_type.h  rk_vdec_cfg.h  rk_vdec_cmd.h  rk_venc_cfg.h  rk_venc_cmd.h  rk_venc_rc.h  rk_venc_ref.h  (+4 more)
hardware/mpp/src/: mpi_enc_utils.c
hardware/rga/: BUILD.gn
hardware/rga/include/: GrallocOps.h  RgaApi.h  RgaMutex.h  RgaSingleton.h  RockchipRga.h  drmrga.h  im2d.h  platform_gralloc4.h  rga.h
hardware/wifi/: BUILD.gn
hardware/wifi/ap6xxx/: nvram_ap6275s.txt
hardware/wifi/proc/sys/net/ipv4/: ping_group_range
rk3568/: BUILD.gn  README.en.md  README_zh.md  ohos.build
rk3568/audio_drivers/codec/rk809_codec/include/: rk809_codec_impl.h  rk817_codec.h
rk3568/audio_drivers/codec/rk809_codec/src/: rk809_codec_adapter.c  rk809_codec_impl.c  rk809_codec_linux_driver.c
rk3568/audio_drivers/dai/include/: rk3568_dai_linux.h  rk3568_dai_ops.h
rk3568/audio_drivers/dai/src/: rk3568_dai_adapter.c  rk3568_dai_linux_driver.c  rk3568_dai_ops.c
rk3568/audio_drivers/dsp/include/: rk3568_dsp_ops.h
rk3568/audio_drivers/dsp/src/: rk3568_dsp_adapter.c  rk3568_dsp_ops.c
rk3568/audio_drivers/headset_monitor/include/: analog_headset.h  analog_headset_base.h
rk3568/audio_drivers/headset_monitor/src/: analog_headset_adc.c  analog_headset_base.c  analog_headset_core.c  analog_headset_gpio.c
rk3568/audio_drivers/include/: audio_device_log.h  rk3568_audio_common.h
rk3568/audio_drivers/soc/include/: rk3568_dma_ops.h
rk3568/audio_drivers/soc/src/: rk3568_dma_adapter.c  rk3568_dma_ops.c
rk3568/bootanimation/: BUILD.gn
rk3568/camera/: BUILD.gn  product.gni
rk3568/camera/src/device_manager/: BUILD.gn
rk3568/camera/src/pipeline_core/: BUILD.gn
rk3568/camera/src/pipeline_core/ipp_algo_example/: ipp_algo_example.c
rk3568/camera/src/pipeline_core/node/: rk_codec_node.cpp
rk3568/cfg/: BUILD.gn  fstab.rk3568  init.rk3568.cfg
rk3568/distributedhardware/: BUILD.gn  distributed_hardware_components_cfg.json
rk3568/kernel/: BUILD.gn  build_kernel.sh
rk3568/loader/: parameter_5_10.txt
rk3568/system_hap/: BUILD.gn  CallUI.hap  Camera.hap  Contacts.hap  Launcher.hap  Launcher_Settings.hap  Mms.hap  ScreenShot.hap  SettingsData.hap  SystemUI-DropdownPanel.hap  SystemUI-NavigationBar.hap  SystemUI-NotificationManagement.hap  SystemUI-StatusBar.hap  SystemUI-VolumePanel.hap  SystemUI.hap
rk3568/tools/linux/: flash.py
rk3568/usb/include/: default_config.h
rk3568/wifi/: Kconfig  Makefile
rk3568/wifi/ap6275s/: hdfwifi_bdh6.mk
rk3568/wifi/ap6275s/hdf/: hdf_mac80211_ap.c  hdf_mac80211_sta.c
rk3568/wifi/bcmdhd_wifi6/: Makefile  hdfwifi_bdh6.mk
rk3568/wifi/bcmdhd_wifi6/hdf/: hdf_bdh_mac80211.c  hdf_driver_bdh_register.c  hdf_mac80211_sta.h  hdf_mac80211_sta_event.c  hdf_mac80211_sta_event.h  hdf_public_ap6275s.h  hdfinit_bdh.c  net_bdh_adpater.c  net_bdh_adpater.h
