# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("launcher_hap") {
  source = "Launcher.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("launcher_settings_hap") {
  source = "Launcher_Settings.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("settingsData_hap") {
  source = "SettingsData.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("navigationBar_hap") {
  source = "SystemUI-NavigationBar.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("statusBar_hap") {
  source = "SystemUI-StatusBar.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("notificationManagement_hap") {
  source = "SystemUI-NotificationManagement.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("volumePanel_hap") {
  source = "SystemUI-VolumePanel.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("dropdownPanel_hap") {
  source = "SystemUI-DropdownPanel.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("systemui_hap") {
  source = "SystemUI.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("screen_shot_hap") {
  source = "ScreenShot.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("camera_hap") {
  source = "Camera.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("note_hap") {
  source = "Note.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("callUI_hap") {
  source = "CallUI.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("mms_hap") {
  source = "Mms.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

ohos_prebuilt_etc("contacts_hap") {
  source = "Contacts.hap"
  module_install_dir = "app"
  part_name = "rockchip_products"
  subsystem_name = "rockchip_products"
}

group("hap") {
  deps = [
    "//applications/standard/hap:callUI_hap",
    "//applications/standard/hap:camera_hap",
    "//applications/standard/hap:contacts_hap",
    "//applications/standard/hap:dropdownPanel_hap",
    "//applications/standard/hap:launcher_hap",
    "//applications/standard/hap:launcher_settings_hap",
    "//applications/standard/hap:mms_hap",
    "//applications/standard/hap:navigationBar_hap",
    "//applications/standard/hap:note_hap",
    "//applications/standard/hap:notificationManagement_hap",
    "//applications/standard/hap:screen_shot_hap",
    "//applications/standard/hap:settingsData_hap",
    "//applications/standard/hap:statusBar_hap",
    "//applications/standard/hap:systemui_hap",
    "//applications/standard/hap:volumePanel_hap",
  ]
}
